--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "canvas": "^3.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -22,13 +21,13 @@
     "mysql2": "^3.11.5",
     "node-fetch": "^3.3.2",
     "sequelize": "^6.37.5",
+    "sequelize-cli": "^6.6.2",
     "sharp": "^0.33.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "sequelize-cli": "^6.6.2"
+    "nodemon": "^3.1.9"
   }
 }
