--- a/src/database/config/config.json
+++ b/src/database/config/config.json
@@ -3,22 +3,21 @@
     "username": "app_user",
     "password": "cafezinho",
     "database": "databasecafe",
-    "host": "35.198.52.200",
+    "host": "db",
     "dialect": "mysql"
   },
-
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "app_user",
+    "password": "cafezinho",
+    "database": "databasecafe_test",
+    "host": "db",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "app_user",
+    "password": "cafezinho",
+    "database": "databasecafe",
+    "host": "db",
     "dialect": "mysql"
   }
 }
